fixed img in small box mobile

--- a/code/style.css
+++ b/code/style.css
@@ -159,29 +159,29 @@ h2 {
   align-content: space-between;
   justify-content: center;
   align-content: stretch;
-  height: 250px;
+  height: 210px;
   background-color: #47bfb1;
   margin: 8px 0;
 }
 
 .small-img {
-  width: 270px;
+  width: 220px;
   padding: 0;
   margin: 8px 0;
 }
 
 h4 {
-  width: 235px;
+  width: 180px;
   height: 30px;
   font-size: 15px;
   color: #fff;
   text-align: left;
-  padding: 0 40px 0 10px;
+  padding: 0 40px 8px 12px;
   margin: 0;
 }
 
 .p-medium {
-  width: 225px;
+  width: 200px;
   font-size: 14px;
   font-weight: 300;
   color: #fff;
