--- a/code/style.css
+++ b/code/style.css
@@ -165,7 +165,8 @@ h2 {
 }
 
 .small-img {
-  width: 220px;
+  width: 210px;
+  height: 194px;
   padding: 0;
   margin: 8px 0;
 }
@@ -176,8 +177,7 @@ h4 {
   font-size: 15px;
   color: #fff;
   text-align: left;
-  padding: 0 40px 8px 12px;
-  margin: 0;
+  margin: 0 0 8px 0;
 }
 
 .p-medium {
@@ -185,7 +185,6 @@ h4 {
   font-size: 14px;
   font-weight: 300;
   color: #fff;
-  padding: 0 40px 0 10px;
   margin: 0;
 }
 
