changed fontsize on h1 desktop

--- a/code/style.css
+++ b/code/style.css
@@ -285,6 +285,7 @@ footer img{
             margin-top: 20px;
             margin-right: 0;
             width: 40%px;
+            max-width: 400px;
           }
           .more-news-grid {
             padding: 10px;
@@ -333,7 +334,7 @@ footer img{
             column-gap: 40px;
           }
           .bignewstext {
-            font-size: 25px;
+            font-size: 20px;
             margin-bottom: 20px;
             margin-right: 40px;
             padding: 20px;
