trying out responsive for tablet and desktop again

--- a/code/style.css
+++ b/code/style.css
@@ -329,14 +329,13 @@ footer {
     flex-direction: column;
     align-items: center;
     flex-wrap: nowrap;
-    width: 25%;
+    width: 200px;
     height: 280px;
     border: solid #47bfb1 8px;
     margin: 0;
   }
 
   .small-img {
-    width: 100%;
     height: 100%;
     margin: 0 0 10px 0;
   }
@@ -385,13 +384,13 @@ footer {
     gap: 8px;
 }
   .small-box {
-    max-width: 220px;
+    width: 220px;
     height: 320px;
     padding: 0 0 20px 0;
 }
    .small-img {
-    max-width: 220px;
-    height: 300px;
+    width: 200px;
+    height: 100%;
     margin: 0 0 10px 0;
 }
   .medium-box {
