--- a/code/style.css
+++ b/code/style.css
@@ -238,6 +238,7 @@ body {
 	margin: 0;
 	padding: 0;
   -webkit-flex-flow: row wrap;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
 	position: relative;
 }
 .flex-item {
