--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,231 @@
-html {
-  background: #0025ff;
-  color: #fff;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+
+body {
+  height: 100vh;
+  background: linen;
+  color: black;
+
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  margin: 20px;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  width: 100%;
+  height: 70px;
+  line-height: 75px;
+
+}
+
+a:hover {
+  color: pink;
+}
+
+a {
+  font-family: Georgia;
+  font-size: 20px;
+  color: rgb(128, 104, 83);
+  text-decoration: none;
+  letter-spacing: 3px;
+}
+
+.logo {
+  width: 60px;
+  height: 60px;
+}
+
+.name {
+  font-size: 20px;
+  color: rgb(49, 47, 47);
+  align-items: flex-start;
+  font-family: Georgia, serif;
+  letter-spacing: 2px;
+
+}
+
+.grid-parent1 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin: 20px
+}
+
+.grid-item {
+  background: rgb(231, 221, 213);
+
+}
+
+.big-news-image {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+
+.grid-text-news {
+  display: flex;
+  font-size: 40px;
+  font-family: Georgia, serif;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
+}
+
+.other-news {
+  display: grid;
+  margin: 20px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column: span 8;
+  gap: 20px;
+  row-gap: 5px;
+  height: 200px;
+}
+
+.small-news-image {
+  width: 335px;
+  height: 335px;
+  object-fit: cover;
+}
+
+
+
+/* img {
+  width: 335px;
+  height: 335px;
+  object-fit: cover;
+} */
+
+.text-item {
+  background: linen;
+  font-size: 25px;
+
+
+}
+
+
+@media screen and (max-width: 667px) {
+
+  .navbar {
+    gap: 5px;
+    line-height: 20px;
+    align-items: flex-end;
+  }
+
+  .logo {
+    width: 25px;
+    height: 25px;
+
+  }
+
+  a {
+    font-size: 12px;
+  }
+
+  .name {
+    display: none;
+  }
+
+  .grid-text-news {
+    font-size: 20px;
+    padding: 10px;
+  }
+
+  .grid-parent1 {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 5px;
+  }
+
+  .big-news-image {
+    width: 335px;
+    height: 335px;
+    object-fit: cover;
+  }
+
+  .other-news {
+    margin: 20px;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 50px;
+    row-gap: 30px;
+    border: none;
+  }
+
+  .grid-item {
+    justify-content: center;
+  }
+
+  .text-item {
+    margin-bottom: 20px;
+
+  }
+
+  .small-news-image {
+    width: 335px;
+    height: 335px;
+    object-fit: cover;
+  }
+
+
+}
+
+
+
+@media screen and (min-width: 668px) and (max-width: 1023px) {
+
+  .navbar {
+    gap: 20px;
+    line-height: 20px;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  .logo {
+    width: 30px;
+    height: 30px;
+
+  }
+
+  a {
+    font-size: 15px;
+  }
+
+  .name {
+    display: none;
+  }
+
+  .grid-item {
+    margin-bottom: none;
+  }
+
+  .grid-parent1 {
+    grid-template-columns: repeat(2, 1fr);
+    border: none;
+  }
+
+  .grid-big-news {
+    gap: none;
+    margin-bottom: none;
+
+  }
+
+  .other-news {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 50px;
+    gap: 20px;
+    align-items: baseline;
+    margin: 30px;
+  }
+
+  .small-news-image {
+    width: 200px;
+    height: 100%;
+    object-fit: cover;
+
+  }
