--- a/code/style.css
+++ b/code/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;1,410;1,500&display=swap');
+
+ body {
+  margin: 0;
+ }
 
 html {
   background: white;
