--- a/code/style.css
+++ b/code/style.css
@@ -154,6 +154,7 @@ a:hover {
 }
 
 .big-news img {
+  object-fit: cover;
   width: 100%;
   height: 100%;
   background-position: center;
@@ -178,6 +179,7 @@ a:hover {
 */
 
 .grid-parent {
+  padding: 15px;
   margin-top: 50px;
   justify-items: center;
   display: grid;
@@ -207,6 +209,7 @@ a:hover {
 }
 
 .grid-item h3 {
+  padding: 10px 0px;
   background: white;
   font-style: BOLDER;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -285,7 +288,8 @@ a:hover {
     align-items: center;
   }
 
-  .logo a {
+  .logo {
+    flex: 1;
   }
 
   .item {
@@ -333,7 +337,7 @@ a:hover {
   }
   .button:not(.secondary) a:hover {
     background: #006d6d;
-    border: #005959;
+    border: 1px solid #005959;
   }
   .button.secondary a:hover {
     color: #ddd;
