--- a/code/style.css
+++ b/code/style.css
@@ -51,13 +51,14 @@ a {
 .banner p{
   color: #fff;
   text-align:left;
+  font-size: 15px; 
 }
 
 
 .nav-bar{
   background-color:#F7941F;
   padding: 10px;
-  display: flex;
+  
   padding-top: .5em;
 	padding-bottom: .5em;
 	border: 1px solid #fff;
@@ -80,6 +81,7 @@ a {
 
 .logo img{
   max-width: 50px;
+  border-radius: 30px;
 }
 
 .nav-bar p {
@@ -94,7 +96,7 @@ a {
 
 .nav-bar-right {
 
-  display: flex;
+  
   font-size: 20px;
   padding: 10px;
   justify-content: space-around;
@@ -111,7 +113,55 @@ a {
   border: 3px solid #fff;
 }
 
-@media (min-width: 769px) {
+
+.big-news{
+  background-color:#FFAEC1;
+  padding: 20px;
+  margin:20px;
+  display: flex;
+}
+
+.big-news-box {
+  background-color: #fff;
+  width: 50%;
+  padding:20px;
+  border:4px solid;
+  border-color: #000000;
+  margin:20px;
+  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+}
+
+.big-news-box img {
+  width:100%;
+  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+}
+
+.grid-with-news-items{
+  background-color:#0025FF;
+  display: grid;
+  
+}
+
+.grid-with-news-items p{
+  font-size: 15px;
+}
+
+.news-item {
+  background-color:#fff;
+  margin:20px;
+  padding:20px;
+  border:4px solid;
+  border-color: #000000;
+  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+  
+}
+
+.news-item img{
+  width: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+@media (min-width: 667px) {
 	.nav-bar,
 	.nav-bar-right {
 		display: flex;
@@ -123,156 +173,20 @@ a {
 		margin: 0 auto;
 		max-width: 1150px;
 	}
-	}
+  .grid-with-news-items {
+  grid-template-columns: repeat( 2,1fr);
+  }
+}
 
-@media (min-width: 1025px) {
+
+@media (min-width: 1024px) {
 	.nav-bar {
 		flex-direction: row;
 		justify-content: space-between;
 	}
 
-}
+  .grid-with-news-items {
+    grid-template-columns: repeat( 4,1fr);
+    }
 
-
-.big-news{
-  background-color:#FFAEC1;
-  padding: 20px;
-  margin:20px;
-  display: flex;
-}
-
-.big-news-box-1 {
-  background-color: #fff;
-  width: 50%;
-  padding:20px;
-  border:4px solid;
-  border-color: #000000;
-  margin:20px;
-  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-}
-
-.big-news-box-2 {
-  background-color: #fff;
-  width: 50%;
-  padding:20px;
-  border:4px solid;
-  border-color: #000000;
-  margin:20px;
-  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-}
-
-.big-news-box-2 img {
-  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-}
-
-.big-news-box-2 img {
-  width:100%
-}
-
-.grid-with-news-items{
-  background-color:#0025FF;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: baseline;
-  justify-content: space-evenly;
-}
-
-.grid-with-news-items p{
-  font-size: 15px;
-}
-
-.news-item-1 {
-  background-color:#fff;
-  margin:20px;
-  width: 20%;
-  padding:20px;
-  border:4px solid;
-  border-color: #000000;
-  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-  
-}
-
-.news-item-2 {
-  background-color:#fff;
-  margin:20px;
-  width: 20%;
-  padding:20px;
-  border:4px solid;
-  border-color: #000000;
-  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-}
-
-.news-item-3 {
-  background-color:#fff;
-  margin:20px;
-  width: 20%;
-  padding:20px;
-  border:4px solid;
-  border-color: #000000;
-  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-}
-
-.news-item-4 {
-  background-color:#fff;
-  margin:20px;
-  width: 20%;
-  padding:20px;
-  border:4px solid;
-  border-color: #000000;
-  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-}
-
-.news-item-5 {
-  background-color:#fff;
-  margin:20px;
-  width: 20%;
-  padding:20px;
-  border:4px solid;
-  border-color: #000000;
-  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-}
-
-.news-item-6 {
-  background-color:#fff;
-  margin:20px;
-  width: 20%;
-  padding:20px;
-  border:4px solid;
-  border-color: #000000;
-  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-}
-
-.news-item-7 {
-  background-color:#fff;
-  margin:20px;
-  width: 20%;
-  padding:20px;
-  border:4px solid;
-  border-color: #000000;
-  box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-}
-
-.news-item-1 img{
-  width: 100%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.news-item-2 img{
-  width: 100%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.news-item-3 img{
-  width: 100%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.news-item-5 img{
-  width: 100%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.news-item-7 img{
-  width: 100%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
