--- a/code/style.css
+++ b/code/style.css
@@ -1,13 +1,14 @@
 
 /*Background and text color*/
 html {
-  background: #0025ff;
+  background: #1C315E;
   color: rgb(0, 0, 0);
 }
 
 /*Styling for body, font and text-align*/
 body {
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Noto Sans', sans-serif;
+  text-align: left;
 }
 
 /*Header: basic styling*/
@@ -30,7 +31,7 @@ header a {
 
 /*company-name text color*/
 .company-name a {
-  color:rgb(0, 146, 114);
+  color: #88A47C;
 }
 
 /* Styling of nav-bar (only in desktop and pad)*/
@@ -41,15 +42,26 @@ header a {
 /*nav-bar links styling*/
 .nav-bar a {
   padding: 5px;
-  color:rgb(0, 146, 114);
+  color: #88A47C;
 }
+
+a:hover{
+  color: #E6E2C3;
+}
+
 
 .grid-big-news{
   padding: 10px;
+  background: #E6E2C3;
 }
 
 .grid-other-news{
   padding: 10px;
+  background: #E6E2C3;
+}
+
+.grid-header {
+  background: #227C70;
 }
 
 /*MEDIA QUERY FÖR MOBIL-STORLEK*/
@@ -59,10 +71,6 @@ header a {
     grid-template-columns: 1fr; 
     grid-template-rows: repeat(10);
     gap: 15px;
-  }
-
-  .grid-item {
-    background: lightgoldenrodyellow;
   }
 
   .nav-bar{
@@ -76,19 +84,17 @@ header a {
 
   .mobile-menu #myLinks{
     display: none;
-    background-color: bisque;
     /*width: 100vw;*/
   }
 
   .mobile-menu a {
     padding: 5px;
-    color:rgb(0, 146, 114);
+    color:  #88A47C;
     display: block;
     font-size: 20px;
     justify-content: center;
   }
-  
-  
+    
 }
 
 /*MEDIA QUEARY FÖR TABLET-STORLEK*/
@@ -98,10 +104,7 @@ header a {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(8);
     gap: 15px;
-  }
-
-  .grid-item {
-    background: lightseagreen;
+    padding: 0px 80px 0px 80px;
   }
 
   .grid-header{
@@ -129,11 +132,6 @@ header a {
     justify-content: center;
     padding: 0px 150px 0px 150px;
     
-
-  }
-
-  .grid-item {
-    background: pink;
   }
 
   .grid-header {
@@ -142,9 +140,6 @@ header a {
 
   .grid-big-news {
     grid-column: span 4;
-  }
-
-  .grid-other-news {
   }
 
   .mobile-menu {
