--- a/code/style.css
+++ b/code/style.css
@@ -85,6 +85,10 @@ h1 {
   border-color: #008B8B;
 }
 
+.flex-initial-article:hover {
+  background-color: #fff0f5;
+}
+
 .flex-initial-image {
   flex:1;
   flex-grow: 1;
