--- a/code/style.css
+++ b/code/style.css
@@ -320,7 +320,7 @@ a:hover {
 
 .fa-linkedin,
 .fa-github {
-  /*display-flex*/
+  display: flex;
   font-size: 38px;
   padding-left: 25px;
   filter: drop-shadow(2px 4px 1px rgb(0 0 0 / 0.3));
