added first images, needs fixing

--- a/code/style.css
+++ b/code/style.css
@@ -55,6 +55,10 @@ a:hover{
   background: #E6E2C3;
 }
 
+.grid-big-news img {
+  width: 100%;
+}
+
 .grid-other-news{
   padding: 10px;
   background: #E6E2C3;
