Change font figcaption

--- a/code/style.css
+++ b/code/style.css
@@ -52,7 +52,8 @@ figure {
 figcaption {
   background-color: var(--border-color);
   color: var(--primary-text-color);
-  font: var(--paragraph-font-family);
+  font-family: var(--review-paragraph-font-family);
+  font-size: 15px;
   text-align: center;
   max-width: 90%;
   padding: 5px 0 5px 0;
