--- a/code/style.css
+++ b/code/style.css
@@ -436,15 +436,6 @@ a:hover {
 }*/
 
 @media (max-width: 667px) {
-  body {
-    margin: 0 20px 0 20px;
-  }
-
-  .other-news h3 {
-    text-align: center;
-    margin: 30px 0 30px 0;
-  }
-
   .logo-magazine {
     width: 100%;
   }
@@ -457,7 +448,6 @@ a:hover {
   .grid-parent-big-news {
     display: grid;
     grid-template-columns: repeat(1, 2fr);
-    grid-template-rows: repeat(1, 100px);
     gap: 10px;
   }
 
@@ -468,11 +458,16 @@ a:hover {
   }
 
   .big-news-paragraph {
-    color: red;
-    width: 100%;
+    overflow-wrap: break-word;
+    margin: 30px 20px 30px 20px;
   }
 
   .other-news {
     width: 100%;
+  }
+
+  .other-news h3 {
+    text-align: center;
+    margin: 30px 0 30px 0;
   }
 }
