--- a/code/style.css
+++ b/code/style.css
@@ -421,6 +421,50 @@ a:hover {
   }
 }*/
 
+@media ((min-width: 668px) and (max-width: 1023px)) {
+  .logo-magazine {
+    width: 100%;
+  }
+
+  .border-container {
+    width: 100%;
+    margin: 0 20px 0 20px;
+  }
+
+  .grid-parent-big-news {
+    display: grid;
+    grid-template-columns: repeat(1, 2fr);
+    gap: 10px;
+  }
+
+  .big-news-paragraph {
+    overflow-wrap: break-word;
+    margin: 30px 20px 30px 20px;
+  }
+
+  .grid-parent-other-news {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    gap: 10px;
+  }
+
+  .img-big-news-one,
+  .img-big-news-two {
+    max-width: 50%;
+  }
+
+  .img-big-news-div {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .other-news h3 {
+    text-align: center;
+    margin: 30px 0 30px 0;
+  }
+}
+
 @media (max-width: 667px) {
   .logo-magazine {
     width: 100%;
